Changes in Release 2.2.2
=============================================
[JOST-66] Cleanup ArtifactMap related classes
* Update logging libraries to grab some bug fixes

Changes in Release 2.2.1
=============================================
[JOST-64] - Multiple calls to ChainingMetadataProvider#getMetadata result in "EntitiesDescriptor is already the child of another XMLObject" exception

Changes in Release 2.2.0
=============================================
[JOST-32] - MetadataSignatureFilter should verify signatures on RoleDescriptor and AffiliationDescriptor elements
[JOST-35] - some XACML elements not correctly marshalled
[JOST-37] - inline policies in XACML policy sets cannot be unmarshalled
[JOST-38] - Marshalling problem for AttributeAssignmentType
[JOST-39] - ReferencedPolicies not used correctly
[JOST-40] - Misspelled method name in ReferencedPoliciesType
[JOST-42] - Missing function for PolicySetType choice group
[JOST-43] - Method setExpression() of class ExpressionType doesn't work
[JOST-44] - Method getAttributeValues() of AttributeType should return List<AttributeValueType>
[JOST-45] - Missing StatusMessage and Description XACML object implementations
[JOST-46] - Method getPolicies of PolicySetType returns null
[JOST-48] - Add feature to require validUntil expiration on metadata
[JOST-49] - cacheDuration and validUntil values in metadata are ignored
[JOST-50] - Security policy rule which evaluates and enforces SAML 2 metadata SPSSODescriptor/@AuthnRequestsSigned
[JOST-51] - Issue with multiple obligation handlers
[JOST-53] - boolean values can not be nulled. Setters should take Boolean objects as in the SAML classes
[JOST-54] - New addObligationhandlers method in ObligationService
[JOST-62] - Add version information in library JAR manifest and provide command line tool to view it

Changes in Release 2.1.0
=============================================
* Addition of contributed XACML code